# cors-proxy

./: .dockerignore  .drone.yml  .gitignore  Cargo.toml  README.md  compose.yaml
.docker/app/: Dockerfile
src/: main.rs
src/config/: args.rs  mod.rs
src/config/common/: mod.rs  pingora.rs  proxy.rs  server.rs  timeframe.rs
src/services/: add_cors_headers.rs  mod.rs
